src/objects/Geocoding_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>The Salesforce class responsible for calling the web service.</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Name__c</fullName>
        <label>Credential Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Results__c</fullName>
        <description>The maximum number of results to return when an address is geocoded.</description>
        <inlineHelpText>The maximum number of results to return when an address is geocoded.</inlineHelpText>
        <label>Maximum Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Save_Geocoding_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, individual Geocoding Results will be saved when records are geocoded.</description>
        <inlineHelpText>If this is checked, individual Geocoding Results will be saved when records are geocoded.</inlineHelpText>
        <label>Save Geocoding Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeout_Seconds__c</fullName>
        <defaultValue>20</defaultValue>
        <description>The timeout in seconds for this service.</description>
        <inlineHelpText>The timeout in seconds for this service.</inlineHelpText>
        <label>Timeout (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Geocoding Settings</label>
</CustomObject>